--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@ customElements.define('hsv-picker', HSVPicker)
 
 
 document.getElementById('picker').addEventListener('input', (evt) => {
-  console.log(evt, evt.target.value, evt.data)
+  // console.log(evt, evt.target.value, evt.data)
+  console.log(evt.data)
 })
 
 // document.getElementById('text').addEventListener('input', (evt) => {
