--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
     sv-combine
     sv-width="200"
     sv-height="200"
-    ></hsv-picker>
+  ></hsv-picker>
 
 </body>
 
 <script type="module">
-import { HSVPicker } from './index.js'
+import { HSVPicker } from './src/index.js'
 
 customElements.define('hsv-picker', HSVPicker)
 
