--- a/index.html
+++ b/index.html
@@ -4,18 +4,24 @@
 
 <body>
 
+  <!-- sb-square -->
   <hsv-picker 
     id="picker"
-    value="#00ff00"
+    value="#12d05f"
+
     hue-type="linear"
     hue-direction="horizontal"
     hue-length="200"
     hue-thickness="10"
-    sv-combine
-    sv-width="200"
-    sv-height="200"
-  ></hsv-picker>
 
+    saturation-picker-direction="horizontal"
+    saturation-picker-length="200"
+    saturation-picker-thickness="10"
+
+    brightness-picker-direction="horizontal"
+    brightness-picker-length="200"
+    brightness-picker-thickness="10"
+  ></hsv-picker>
 </body>
 
 <script type="module">
