--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <!-- sb-square -->
   <hsv-picker 
     id="picker"
-    value="#12d05f"
+    value="red"
 
     hue-type="linear"
     hue-direction="horizontal"
@@ -25,7 +25,7 @@
 </body>
 
 <script type="module">
-import { HSVPicker } from './dist/color-picker.js'
+import { HSVPicker } from './dist/index.js'
 
 customElements.define('hsv-picker', HSVPicker)
 
