--- a/demo/index.html
+++ b/demo/index.html
@@ -58,9 +58,8 @@
 ></hsv-picker>
 </body>
 
-<script type="module" src="/src/index.ts"></script>
 <script type="module">
-  import { HSVPicker } from '/src'
+  import { HSVPicker } from '@/index'
 
   customElements.define('hsv-picker', HSVPicker)
 
