--- a/index.html
+++ b/index.html
@@ -10,6 +10,17 @@
     id="picker" 
     value="red"
 
+    picker-class=""
+    picker-direction=""
+    picker-length=""
+    picker-thickness=""
+
+    indicator-class=""
+    indicator-type=""
+    indicator-size=""
+    indicator-border-thickness=""
+    indicator-border-color=""
+
     hue-picker-class="hue-picker"
     hue-picker-type="linear"
     hue-picker-direction="horizontal"
@@ -35,7 +46,8 @@
   <hsv-picker 
   id="picker2" 
   value="DodgerBlue"
-  sb-square
+
+  sv-plane
 
   hue-picker-class="hue-picker"
   hue-picker-type="linear"
